# hsp90-smfret-model

./: .gitignore  .zenodo.json  404.html  CITATION.cff  LICENSE  Makefile  NOTICE  README.md  api.html  check_data.py  contributing.html  environment.yml  fit_hmm_per_trace.py  get_traces.py  index.html  math.html  merged.py  mkdocs.yml  objects.inv  overview.html  pipeline.ipynb  pipeline.py  pipeline_v2.py  processing_data.py  pyproject.toml  read_hd5.py  read_traces.py  requirements.txt  sitemap.xml  state_specific.py  test.py  usage.html  viz_hmm_results.py
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
data/: fpbase_spectra.csv  fpbase_spectra_2.csv
docs/: api.md  contributing.md  index.md  math.md  overview.md  usage.md
search/: search_index.json
tests/: conftest.py  test_get_traces.py  test_pipeline.py
