[project]
name = "fret-fit"
version = "0.1.0"
description = "A pipeline for FRET simulation and fitting"
authors = [{ name = "Abhinav Mishra" }]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "tqdm",
    "notebook",
    "tables>=3.10.1",
]

[tool.uv]
dev-dependencies = ["ipykernel"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
