[project]
name = "Hsp90-Single-Molecule-FRET-Analysis"
version = "0.1.0"
requires-python = ">=3.11"

description = """
Environment for analyzing single-molecule FRET trajectories from live-cell
HILO/ALEX tracking experiments. Used to construct and fit a three-state
(OPEN–INTERMEDIATE–CLOSED) Hsp90 kinetic model with bleaching and static
fractions, based on trajectory extraction methods and analysis frameworks
described in:
- Anandamurugan et al., Biophys J (2026), FRET-TTB in living cells
- Schrangl et al., JoVE (2021), automated 2D spatiotemporal smFRET analysis.

This environment supports:
• dense smFRET time series preprocessing
• global nonlinear kinetic fitting with multistart optimization
• bootstrap uncertainty estimation
• Sobol global sensitivity analysis
• numba-accelerated ODE models
"""

authors = [{ name = "Abhinav Mishra", email = "mishraabhinav36@gmail.com" }]
license = "BSD-3-Clause"

classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "tables>=3.10.1",
  "numba>=0.62.1",
  "joblib>=1.5.2",
  "rich>=14.2.0",
  "SALib>=1.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3",
  "numpy",
  "scipy",
  "pandas",
  "black",
  "ruff",
]
docs = [
  "mkdocs-material",
  "mkdocs-autorefs",
  "mkdocstrings[python]",
  "mkdocs-jupyter",
]

[tool.uv]
dev-dependencies = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-mock>=3",
  "numpy",
  "scipy",
  "pandas",
  "black",
  "ruff",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "C4",
  "SIM",
  "TCH",
  "ANN",
]
ignore = [
  "B008",
  "ANN001",
  "ANN201",
  "N803",
  "N806",
  "N815",
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "TC002", "TC003"]

[tool.ruff.lint.isort]
known-first-party = ["get_traces", "pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--cov=. --cov-report=term-missing --cov-report=xml --cov-fail-under=90"
